# sanctum

./: .gitignore  Cargo.toml  Dockerfile  README.md
crates/odyssey/: .odyssey-vendor  Cargo.toml
crates/odyssey/css/: components.css  font.css  motion.css  tokens.css
crates/odyssey/js/: motion.js  spark.js  wire.js
crates/odyssey/src/: controls.rs  data.rs  feedback.rs  html.rs  icons.rs  identity.rs  lib.rs  shell.rs  theme.rs
crates/odyssey/src/i18n/: en.rs  ja.rs  mod.rs  zh.rs
src/: audit.rs  auth.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  model.rs  store.rs
src/handlers/: mod.rs  secrets.rs  transit.rs
static/: app.css  service.css
templates/: error.html  index.html  reveal.html  secret.html
tests/: pg_integration.rs  vault_flow.rs
